--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Crafting Snapshot Build / 马夫鱼：合成 快照构建
+name: Snapshot Build / 快照构建
 
 on: [push, pull_request]
 
@@ -28,21 +28,3 @@ jobs:
         with:
           name: mafish-crafting-snapshot-mod
           path: build/libs/*.jar
-  
-  snapshot-build-datapack:
-    runs-on: ubuntu-latest
-    steps:
-      - name: 获取仓库文件
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          fetch-tags: true
-    
-      - name: 上传 Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: mafish-crafting-snapshot-datapack
-          path: |
-            src/main/resources/data
-            src/main/resources/pack.mcmeta
-            src/main/resources/pack.png
